# bytes-radar

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  rustfmt.toml  wrangler.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  DEPLOYMENT.md
examples/: README.md  basic_analysis.rs  compare_repositories.rs  custom_analysis.rs  github_token_analysis.rs
server/: package.json  tsconfig.json
src/: languages.json  worker.rs
src/cli/: args.rs  mod.rs  output.rs  url_parser.rs
src/core/: analysis.rs  error.rs  filter.rs  net.rs  registry.rs
src/server/: mod.rs
tests/: README.md  analysis_tests.rs  cli_tests.rs  integration_tests.rs
