[package]
name = "bytes-radar"
version = "0.6.0"
edition = "2024"
authors = ["ProgramZmh <zmh@lightxi.com>"]
description = "A tool for analyzing code statistics from remote repositories with hyper-fast performance"
license = "Apache-2.0"
repository = "https://github.com/zmh-program/bytes-radar"
keywords = ["cloc", "code-analysis", "remote", "cli"]
exclude = [
    "target/",
    "app/",
    "Cargo.lock",
    "tests/",
    "examples/",
    ".github/",
    ".gitignore",
    ".git/",
    "*.md",
    "benches/",
    "docs/",
    "Makefile",
    "rustfmt.toml",
]

[features]
default = ["cli"]
cli = ["colored", "env_logger", "clap", "indicatif"]
worker = [
    "wasm-bindgen",
    "web-sys",
    "js-sys",
    "wasm-bindgen-futures",
    "serde-wasm-bindgen",
]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = "1.21.3"
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-xml-rs = "0.8.1"
log = "0.4.27"
tar = "0.4.44"
flate2 = "1.1.2"
futures-util = "0.3.31"
bytes = "1.10.1"

# CLI dependencies
colored = { version = "3.0.0", optional = true }
env_logger = { version = "0.11.8", optional = true }
clap = { version = "4.5.40", features = ["derive"], optional = true }
indicatif = { version = "0.18.0", optional = true }

# WASM dependencies
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "console",
], optional = true }
js-sys = { version = "0.3.77", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

# Configure dependencies differently for different targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", default-features = false, features = ["full"] }
reqwest = { version = "0.12.22", features = [
    "stream",
    "rustls-tls",
    "json",
], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.46.1", default-features = false, features = [
    "macros",
    "rt",
    "sync",
] }
reqwest = { version = "0.12.22", features = [
    "stream",
    "json",
], default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[example]]
name = "basic_analysis"
path = "examples/basic_analysis.rs"

[[example]]
name = "github_token_analysis"
path = "examples/github_token_analysis.rs"

[[example]]
name = "compare_repositories"
path = "examples/compare_repositories.rs"

[[example]]
name = "custom_analysis"
path = "examples/custom_analysis.rs"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt"] }

[[bin]]
name = "bradar"
path = "src/main.rs"
required-features = ["cli"]
